--- a/Profile Folder/chrome/partials/chrome/_navigation-buttons.scss
+++ b/Profile Folder/chrome/partials/chrome/_navigation-buttons.scss
@@ -52,9 +52,7 @@
                 box-sizing: border-box;
             }
         
-            &:hover {
-                outline: 1px solid rgba(250,5047, 250, 0.20);
-    
+            &:hover { 
                 &::before {
                     opacity: 0.5;
                 }
